Fix chatbot icon being blurry

--- a/frontend/src/css/components/chatbot.css
+++ b/frontend/src/css/components/chatbot.css
@@ -1,3 +1,9 @@
+.chatbot-icon-container {
+    width: 3.125rem;
+    height: 3.125rem;
+    transform: translateZ(0);
+}
+
 .chatbot-bubble {
     z-index: 10;
     position: fixed;
@@ -18,12 +24,6 @@
 
 .chatbot-bubble.active {
     display: none;
-}
-
-.chatbot-icon-container {
-    width: 3rem;
-    height: 3rem;
-    transform: translateZ(0);
 }
 
 .chatbot-icon {
